# tui-chat

./: AGENTS.md  Cargo.toml  LICENSE  README.md
examples/: chat_app.rs
src/: lib.rs  main.rs
tests/: integration.rs
