[package]
name = "tui-chat"
version = "0.1.0"
edition = "2024"
authors = ["emincangencer"]
description = "Terminal chat widgets for ratatui applications"
keywords = ["ratatui", "terminal", "chat", "widget", "tui"]
categories = ["gui"]
license = "MIT"
repository = "https://github.com/emincangencer/tui-chat"

[lib]
name = "tui_chat"
path = "src/lib.rs"

[[example]]
name = "chat_app"
path = "examples/chat_app.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
textwrap = "0.16.0"